Add games and music pages

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,6 +11,8 @@ $box-background-color: $beige;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
+$navbar-dropdown-background-color: $beige;
+
 @import '../bulma/bulma.sass';
 
 .profile {
