--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -14,6 +14,13 @@
         <div id="navbarData" class="navbar-menu">
             <div class="navbar-end">
                 <a class="navbar-item" href="/">Home</a>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link">About Me</a>
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item" href="/games">Games</a>
+                        <a class="navbar-item" href="/music">Music</a>
+                    </div>
+                </div>
                 <a class="navbar-item" href="/doc/resume.pdf">Resume</a>
             </div>
         </div>
