--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <script src="/js/nav.js"></script>
-    <script src="/js/email.js"></script>
 
-    <title>{{ .Site.Title }}</title>
+    <title>{{ if .Title }}{{ .Title }} | {{ end}}{{ .Site.Title }}</title>
     <script src="https://kit.fontawesome.com/08efcee44d.js"></script>
 
     <link rel="stylesheet" href="{{ $style.Permalink }}" />
