--- a/layouts/static/single.html
+++ b/layouts/static/single.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
     <div class="content">
+    <h1>{{ .Title }}</h1>
     {{ .Content }}
     {{ if eq .Page.Name "Music" }}
         <h3>Recently Streamed Music</h3>
