--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
             <p>CS @ UT Austin</p>
             <nav class="level is-mobile">
                 {{ range .Site.Data.links }}
-                    <a {{ if .id }} id="{{ .id }}" {{ end }} class="level-item is-link" href="{{ .href }}">
+                    <a class="level-item is-link" href="{{ .href }}">
                         <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
                             <i class="{{ .icon }} fa-stack-1x fa-inverse"></i>
