--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -15,7 +15,7 @@
             <div class="navbar-end">
                 <a class="navbar-item" href="/">Home</a>
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">About Me</a>
+                    <a class="navbar-link">Interests</a>
                     <div class="navbar-dropdown">
                         <a class="navbar-item" href="/games">Games</a>
                         <a class="navbar-item" href="/music">Music</a>
