--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -17,8 +17,8 @@
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">Interests</a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="/games">Games</a>
-                        <a class="navbar-item" href="/music">Music</a>
+                        <a class="navbar-item" href="/games">🎮 Games</a>
+                        <a class="navbar-item" href="/music">🎻 Music</a>
                     </div>
                 </div>
                 <a class="navbar-item" href="/doc/resume.pdf">Resume</a>
