--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="columns">
+    <div class="columns is-vcentered">
         <div class="column has-text-centered is-12-mobile is-5-tablet is-5-desktop">
             <div class="is-inline-block">
                 <img class="profile" src="img/me.jpg" width="256" height="256" />
@@ -23,5 +23,4 @@
     <div class="column content">
         {{ .Content }}
     </div>
-    <script src="/js/email.js"></script>
 {{ end }}
