Update games and music pages for more detail, use Spotify top tracks endpoint

--- a/layouts/static/single.html
+++ b/layouts/static/single.html
@@ -8,13 +8,13 @@
             <article class="media">
                 <div class="media-left">
                     <figure class="image is-64x64">
-                        <img src="{{ (index .track.album.images 2).url }}" />
+                        <img src="{{ (index .album.images 2).url }}" />
                     </figure>
                 </div>
                 <div class="media-content">
-                    <strong>{{ .track.name }}</strong>
+                    <strong>{{ .name }}</strong>
                     <br />
-                    {{ range $i, $e := .track.artists }}
+                    {{ range $i, $e := .artists }}
                         {{ if $i }}<br />{{ end }}
                         {{ $e.name }}
                     {{ end }}
@@ -23,7 +23,7 @@
         {{ end }}
     {{ else if eq .Page.Name "Games" }}
         <h3>Recently Played Games</h3>
-        <p>These are games I've played on Steam during the last couple of weeks.</p>
+        <p>These are games I've played on Steam during the past couple of weeks.</p>
         {{ range .Site.Data.steam.response.games }}
             <article class="media">
                 <div class="media-content">
