Update homepage with part-time

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,11 @@
         </div>
         <div id="info-col" class="column content has-text-centered is-12-mobile is-5-tablet is-5-desktop">
             <h1>Benjamin Porter</h1>
-            <p>CS @ UT Austin</p>
+            <p>
+                Computer Science at UT Austin
+                <br />
+                Software Development Intern at Koddi
+            </p>
             <nav class="level is-mobile">
                 {{ range .Site.Data.links }}
                     <a class="level-item is-link" href="{{ .href }}">
