--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
             </p>
             <nav class="level is-mobile">
                 {{ range .Site.Data.links }}
-                    <a class="level-item is-link" href="{{ .href }}">
+                    <a class="no-ul level-item is-link" href="{{ .href }}">
                         <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
                             <i class="{{ .icon }} fa-stack-1x fa-inverse"></i>
