--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -13,15 +13,15 @@
 
         <div id="navbarData" class="navbar-menu">
             <div class="navbar-end">
-                <a class="navbar-item" href="/">Home</a>
+                <a class="no-ul navbar-item" href="/">Home</a>
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">Interests</a>
+                    <a class="no-ul navbar-link">Interests</a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="/games">🎮 Games</a>
-                        <a class="navbar-item" href="/music">🎻 Music</a>
+                        <a class="no-ul navbar-item" href="/games">🎮 Games</a>
+                        <a class="no-ul navbar-item" href="/music">🎻 Music</a>
                     </div>
                 </div>
-                <a class="navbar-item" href="/doc/resume.pdf">Resume</a>
+                <a class="no-ul navbar-item" href="/doc/resume.pdf">Resume</a>
             </div>
         </div>
     </div>
