Only include profile pic JS in homepage, clean up some divs

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
     {{ partial "head.html" . }}
-    <body>
+    <body class="content">
         {{ partial "nav.html" . }}
         <section class="section">
             <div class="container">
