--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,9 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="container">
         <div class="navbar-brand">
-            <a class="no-ul navbar-item" href="/">
-                <h6 class="title is-6">Benjamin Porter</h6>
-            </a>
+            <a class="no-ul navbar-item" href="/">Benjamin Porter</a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarData">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
