Add last updated footer

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,6 +11,11 @@ $link-hover: $link;
 
 $body-background-color: $bg;
 
+$hr-background-color: $link;
+
+$code-background: $bg;
+$code: $accent;
+
 $navbar-background-color: $bg;
 $navbar-item-hover-background-color: $bg;
 $navbar-dropdown-background-color: $bg;
