--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
         <section class="section">
             <div class="container">
                 {{ block "main" . }}{{ end }}
+                {{ partial "footer.html" . }}
             </div>
         </section>
     </body>
