--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
                 <img id="profile" class="profile" src="/img/profile/0.jpg" width="256" height="256" />
             </div>
         </div>
-        <div id="info-col" class="column content has-text-centered is-12-mobile is-5-tablet is-5-desktop">
+        <div id="info-col" class="column has-text-centered is-12-mobile is-5-tablet is-5-desktop">
             <h1>Benjamin Porter</h1>
             <p>{{ .Site.Params.Tagline }}</p>
             <nav class="level is-mobile">
